@@ -1,3 +1,10 @@
+2007-05-14  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gslice.h:
+	* glib/gslice.c:
+	* glib/glib.symbols: Make g_slice_debug_tree_statistics() 
+	debug-only functionality again.
+
 2007-05-14  Christian Persch  <chpe@gnome.org>
 
 	* docs/reference/glib/tmpl/string_utils.sgml: Improve g_strerror and
